--- a/.project-metadata.yaml
+++ b/.project-metadata.yaml
@@ -26,7 +26,7 @@ tasks:
     subdomain: cmlllm
     script: 1_app/llm_rag_app.py
     short_summary: Start CML OpenAI Text to SQL application
-    long_summary: This application requires an available GPU to run the LLM model. Startup may be delayed if autoscaling is being performed or fail if GPU cannot be scheduled on this workspace. Please contact your administrator for GPU scheduling.
+    long_summary: Because this AMP leverages OpenAI, you do not need GPUs to run it; however, there are minimum resource constraints which must be met for CPU and Memory availability.
     cpu: 2
     memory: 16
     environment_variables:
